--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "path-to-regexp": "1.8.0"
   }
 }
