--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "express": "4.18.2",
-    "path-to-regexp": "1.8.0"
+    "path-to-regexp": "^1.8.0"
   }
 }
