--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon main.js",
-    "start": "node main.js",
-    "preinstall": "npx npm-force-resolutions",
-  "postinstall": "rm -rf node_modules/path-to-regexp"
-  },
-  "resolutions": {
-    "path-to-regexp": "1.8.0"
+    "start": "node main.js"
   },
   "keywords": [],
   "author": "",
@@ -37,5 +32,4 @@
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
-  
 }
