--- a/backend/.env
+++ b/backend/.env
@@ -8,5 +8,6 @@ HUGGINGFACE_API_KEY=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
 MODEL_ID=mistralai/Mistral-7B-Instruct-v0.1
 MAILTRAP_PASS=e8eb0272fa1ce233731efabce7fc8144
 MAILTRAP_USER=api
-FRONTEND_URL="https://nexusai.railway.app"
+FRONTEND_URL="https://nexus-ai-chatbotv1.onrender.com"
 COOKIE_DOMAIN="nexus-chatbot-ai.onrender.com"
+VITE_API_URL="https://nexus-chatbot-ai.onrender.com"
